# BDD10-DA-Yolov5

./: README.md
IS_Aug/: IS_Automation.ipynb  Mosaic.ipynb  bdd2yolov5pytorchtxt.ipynb  instance_segmentation.ipynb  instance_switching_car.ipynb  instance_switching_label_count.ipynb  make_category_directory_yolov5.ipynb
conda_env/: conda_requirements.txt  environment.yaml  pip_requirements.txt  pyproject.toml
finished_jobs/Yolov5_basecocoroboflow_Bdd10k_Train1_colorful_bush_4/: yolov5_bdd10k_test1_v1.481603.out
finished_jobs/Yolov5_baseyolov5pytorch_seed450_Train6_ancient_monkey_14/: yolov5_bdd10k_base_seed450_test6_v1.481774.out
instance_switching/: README.md  instance_switching.py  is_path.yaml  is_utils.py  utils.py
mosaic/: README.md  mosaic.py  mosaic_path.yaml  mosaic_utils.py  requirements.txt
submit_jobs/: Yolov5_is_pr_off.sh  Yolov5_is_tr.sh  mosaic_tr1000.sh  mosaic_tr1000_off.sh  run_job.sh  yolov5_bdd10k_ISyolov5pytorch_IS_allseeds_train_test21_v1.484353.err  yolov5_bdd10k_ISyolov5pytorch_no_mosaic_IS_allseeds_train_test20_v1.484352.err  yolov5_bdd10k_ISyolov5pytorch_no_mosaic_IS_allseeds_train_test20_v1.484352.out  yolov5_bdd10k_mosaicyolov5pytorch_nomosaic_my_mosaic_1000samples_batch64_train_test19_v1.484275.err  yolov5_custom_mosaic1_train.sh  yolov5_mosaic.sh
wandb/: latest-run
wandb/run-20220802_130332-1e7rd8zb/: run-1e7rd8zb.wandb
wandb/run-20220802_130332-1e7rd8zb/files/: config.yaml  wandb-metadata.json  wandb-summary.json
yolov5/wandb/: latest-run
yolov5/wandb/run-20220803_192714-36gpcvsl/: run-36gpcvsl.wandb
(+2620 files in other folders)
