[tool.poetry]
name = "base"
version = "0.0.1"
description = ""
authors = ["Ishan Chakravorty"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
matplotlib = "^3.2.2"
numpy = "^1.18.5"
opencv-python = "^4.1.1"
Pillow = "^7.1.2"
PyYAML = "^5.3.1"
requests = "^2.23.0"
scipy = "^1.4.1"
torch = "^1.7.0"
torchvision = "^0.8.1"
tqdm = "^4.64.0"
protobuf = "^3.20.1"
albumentations = "^1.2.1"
pytorch-lightning = "^1.5.9"
black = "^22.6.0"
flake8 = "^4.0.1"
flake8-docstrings = "^1.6.0"
gmplot = "^1.4.1"
isort = "^5.10.1"
joblib = "^1.1.0"
motmetrics = "^1.2.5"
mypy = "^0.971"
pycocotools = "^2.0.4"
pylint = "^2.14.5"
pytest = "^7.1.2"
scikit-image = "^0.19.3"
Sphinx = "^5.1.1"
sphinx-rtd-theme = "^1.0.0"
tabulate = "^0.8.10"
toml = "^0.10.2"
scalabel = {git = "https://github.com/scalabel/scalabel.git"}
wandb = "^0.12.21"
shapely = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
tensorboard = "^2.4.1"
pandas = "^1.1.4"
seaborn = "^0.11.0"
ipython = "^8.0.1"
psutil = "^5.7.3"
thop = "^0.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
